fix: scroll to top now on spanish

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Close content box-->
        </div>
        <div id="footer" class="header hide-desktop show-mobile">
-            <a href="#">Scroll to top</a>
+            <a href="#">Ir arriba</a>
         </div>
     <!-- Close body content-->
     </div>
